retrieved fetch data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="index.js" defer></script>
 </head>
 <body>
+    <form action="">
+        <label for="location"></label>
+        <input type="text" name="location" id="location">
+    </form>
     
 </body>
 </html>
