refactoring the app functions

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" href="style.css">
-    <script src="index.js" defer></script>
+    <script src="./src/index.js" defer ></script>
 </head>
 <body>
-    <form action="">
+    <form >
         <label for="location"></label>
         <input type="text" name="location" id="location">
+
+        <button id="btn-location"> Search</button>
     </form>
     
 </body>
