added all elemts with basic info and style

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <script src="./src/index.js" defer ></script>
 </head>
 <body>
-    <form >
-        <label for="location"></label>
-        <input type="text" name="location" id="location">
-
-        <button id="btn-location"> Search</button>
-    </form>
+    <div id="srch-form">
+        <form >
+            <label for="location"></label>
+            <input type="text" name="location" id="location">
+            <button id="btn-location"> Search</button>
+        </form>
+    </div>
     <div id="content">
 
     </div>
