refactoring the while and reduce global var

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <button id="btn-location"> Search</button>
         </form>
     </div>
+    <div id="Location-title">
+        
+    </div>
     <div id="content">
 
     </div>
