refactoring and adding celcius/farenhait btn

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
             <input type="text" name="location" id="location">
             <button id="btn-location"> Search</button>
         </form>
+
+        <button id="change" data-unity="celcius">Cº</button>
     </div>
     <div id="Location-title">
-        
+
     </div>
     <div id="content">
 
