--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="./src/index.js" defer ></script>
 </head>
-<body>
+<body id="bg" class="day">
     <div id="srch-form">
         <form >
             <div class="form-row">
